# NextMinds_Nexus-

./: README.md  pyproject.toml
src/: config.py
src/api/: app.py  chat_engine.py  models.py
src/api/routes/: admin.py  chat.py  search.py
src/db/: operations.py
tests/: conftest.py  test_cli.py  test_crawler.py  test_db_operations.py  test_embedder.py  test_ingest.py
